[gd_scene load_steps=14 format=3 uid="uid://c2igahtpjncvi"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_l3gl0"]
[ext_resource type="Texture2D" uid="uid://67wuvrxa5yig" path="res://assets/player/lil-guy-Sheet.png" id="2_f7n6l"]
[ext_resource type="Script" path="res://utilities/states/state_machine.gd" id="3_mfc8p"]
[ext_resource type="Script" path="res://scenes/player/idle.gd" id="4_xncyo"]
[ext_resource type="Script" path="res://scenes/player/carrying.gd" id="5_ih6nt"]
[ext_resource type="Texture2D" uid="uid://3ie8dlqoxidf" path="res://assets/ui/money-Sheet.png" id="6_54amc"]
[ext_resource type="Script" path="res://scenes/player/money.gd" id="6_em40s"]
[ext_resource type="FontFile" uid="uid://cvqqiiljy1x4j" path="res://assets/font/PixelRPG.ttf" id="7_3843h"]
[ext_resource type="AudioStream" uid="uid://b3lng30xcg6jq" path="res://assets/audio/jump.wav" id="9_yxkxq"]
[ext_resource type="AudioStream" uid="uid://p0lla2fj8gau" path="res://assets/audio/step.wav" id="10_iidf5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_furt1"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jby72"]
size = Vector2(11, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g00yc"]
size = Vector2(257.5, 94)

[node name="Player" type="CharacterBody2D"]
z_index = 100
collision_layer = 2
collision_mask = 25
script = ExtResource("1_l3gl0")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_furt1")
debug_color = Color(0.959722, 1.92523e-07, 0.520047, 0.42)

[node name="General" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="General"]
texture = ExtResource("2_f7n6l")

[node name="Camera2D" type="Camera2D" parent="General"]
position = Vector2(0, -34)
zoom = Vector2(1.25, 1.25)

[node name="PickupZone" type="Area2D" parent="General"]
collision_layer = 0
collision_mask = 152

[node name="PickupCollider" type="CollisionShape2D" parent="General/PickupZone"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_jby72")

[node name="PickupMarker" type="Marker2D" parent="General"]
position = Vector2(0, -9)

[node name="ThrowArea" type="Area2D" parent="General"]
editor_description = "You have to click and drag from this area to throw a fruit."

[node name="Collider" type="CollisionShape2D" parent="General/ThrowArea"]
position = Vector2(8.25, -20)
shape = SubResource("RectangleShape2D_g00yc")
debug_color = Color(0.662745, 0.486275, 0.45098, 0.419608)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_mfc8p")
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("4_xncyo")

[node name="Carrying" type="Node" parent="StateMachine"]
script = ExtResource("5_ih6nt")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Money" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = 6.0
offset_top = 8.0
offset_right = 6.0
offset_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("6_em40s")

[node name="Sprite2D" type="Sprite2D" parent="UI/Money"]
texture = ExtResource("6_54amc")

[node name="MoneyCount" type="Label" parent="UI/Money"]
layout_mode = 0
offset_left = 6.0
offset_top = -5.0
offset_right = 15.0
offset_bottom = 7.0
theme_override_fonts/font = ExtResource("7_3843h")
theme_override_font_sizes/font_size = 10
text = "0"

[node name="Audio" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("9_yxkxq")
volume_db = -20.0

[node name="Footsteps" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("10_iidf5")
volume_db = -10.0

[connection signal="mouse_entered" from="General/ThrowArea" to="." method="_on_throw_area_mouse_entered"]
[connection signal="mouse_exited" from="General/ThrowArea" to="." method="_on_throw_area_mouse_exited"]
